# iris

./: .JuliaFormatter.toml  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.txt  Project.toml  README.md  build-coverage.sh  build.jl  build.sh  pyproject.toml  setup.py
include/brisbane/: CMakeLists.txt  brisbane_errno.h  brisbane_hexagon.h  brisbane_hexagon_imp.h  brisbane_llvm.h  brisbane_openmp.h  brisbane_poly.h
include/brisbane/CL/: cl.h
include/brisbane/hexagon/: LICENSE  rpcmem.h
include/iris/: CMakeLists.txt  Iris.jl  IrisHRT.jl  Tiling1D.h  Tiling2D.h  Tiling3D.h  brisbane.h  brisbane.hpp  brisbane_errno.h  brisbane_hexagon.h  brisbane_openmp.h  brisbane_poly.h  brisbane_poly_types.h  brisbane_runtime.h  default_cpu_gpu_kernels.cpp  default_gpu_kernels.cpp  gettime.h  iris.h  iris.hpp  iris.rs  iris_errno.h  iris_hexagon.h  iris_hexagon_imp.h  iris_host2cuda.h  iris_host2hip.h  iris_host2opencl.h  iris_llvm.h  iris_macros.h  iris_openmp.h  iris_poly.h  iris_poly_types.h  iris_runtime.h  verify.h
src/: CMakeLists.txt  IrisHRT.jl  Kernels.jl  Tiling1D.jl  Tiling2D.jl  Tiling3D.jl
src/runtime/: AsyncData.h  AutoDAG.cpp  AutoDAG.h  BaseMem.cpp  BaseMem.h  CAPI.cpp  CMakeLists.txt  CPUEvent.h  Command.cpp  Command.h  Config.h.in  Consistency.cpp  Consistency.h  DataMem.cpp  DataMem.h  DataMemRegion.cpp  DataMemRegion.h  Debug.h  Device.cpp  Device.h  DeviceCUDA.cpp  DeviceCUDA.h  DeviceHIP.cpp  DeviceHIP.h  DeviceHexagon.cpp  DeviceHexagon.h  DeviceLevelZero.cpp  DeviceLevelZero.h  DeviceOpenCL.cpp  DeviceOpenCL.h  DeviceOpenMP.cpp  DeviceOpenMP.h  DeviceQIREE.cpp  DeviceQIREE.h  EventExchange.cpp  EventExchange.h  Filter.h  FilterTaskSplit.cpp  FilterTaskSplit.h  FortranAPI-IRIS.f90  (+131 more)
tests/: .gitignore  CMakeLists.txt  Makefile.tests  README.md  clean.sh  run.sh
tests/01_init_finalize/: Makefile  test01_init_finalize.c
tests/02_task_depend/: Makefile  test02_task_depend.c  test02_task_depend.py
tests/03_release/: Makefile  test03_release.c
tests/04_enclosing_targets/: Makefile  kernel.cl  kernel.cu  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test04_enclosing_targets.c
tests/05_snapdragon/: brisbane.mk  kernel.omp.mk  saxpy.mk
tests/06_device/: Makefile  test06_device.c  test06_device.py
tests/07_policy_register/: Makefile  kernel.cl  kernel.cl.openmp.c  kernel.cl.openmp.h  kernel.hip.cpp  policy_gws.cpp  policy_gws_hook.cpp  policy_last.cpp  test07_policy_register.c
tests/08_multithreading/: Makefile  test08_multithreading.c
tests/09_dataflow/: Makefile  kernel.cl  kernel.cu  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test09_dataflow.c
tests/10_multikernelexecution/: Makefile  kernel.cl  kernel.cu  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test10_multikernelexecution.c
tests/11_deadlock/: Makefile  test11_deadlock.c
tests/12_task_custom/: Makefile  test12_task_custom.cpp
tests/13_hooks/: Makefile  test13_hooks.cpp
tests/14_permanent_task/: Makefile  kernel.cl  kernel.cu  kernel.openmp.c  kernel.openmp.h  test14_permanent_task.c
tests/15_graph/: Makefile  test15_graph.c
tests/16_task_host/: Makefile  kernel.cl  kernel.cl.openmp.c  kernel.cl.openmp.h  kernel.cu  kernel.hip.cpp  test16_task_host.c
tests/17_json/: Makefile  graph.json  kernel.cl  kernel.cl.openmp.h  kernel.cu  kernel.hip.cpp  test17_json.c
tests/18_record/: Makefile  kernel.cl.openmp.h  test18_record.c  test18_replay.c
tests/19_replay/: Makefile  kernel.hip.cpp  test19_replay.c
tests/20_cublas/: Makefile  kernel.cu  test20_cublas.c
tests/21_task_malloc/: Makefile  kernel.ptx  test21_task_malloc.c
tests/22_json_mixed_args/: Makefile  graph_data_size.json  graph_data_type.json  kernel.cl  kernel.cu  kernel.hexagon.c  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test22_json_mixed_args.c
tests/23_multigraph/: Makefile  kernel.cl  kernel.cl.openmp.c  kernel.cl.openmp.h  kernel.cu  kernel.hip.cpp  test23_multigraph.c
tests/24_multi_kernels/: Makefile  kernel-stupid.cl  kernel.cu  kernel.hip.cpp  test24_multi_kernels.cpp
tests/25_random_tasks/: Makefile  kernel.cl  kernel.cu  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test25_random_tasks.c
tests/26_env_set/: Makefile  kernel-negative.cl  kernel-negative.cu  kernel.cl  kernel.cu  kernel.hip.cpp  test26_env_set.cpp
tests/27_deadlock2/: Makefile  kernel.cl  kernel.cu  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test27_deadlock2  test27_deadlock2.cpp
tests/28_json2/: Makefile  graph-old.json  graph.json  kernel.cl  kernel.cu  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test28_json2.c
tests/29_data_mem/: Makefile  graph.json  kernel.cl  kernel.cl.openmp.c  kernel.cl.openmp.h  kernel.cu  test29_data_mem.c  test_backends.sh
tests/29_exclusive_mem/: Makefile  kernel.cu  test29_exclusive_mem.c
tests/30_task_info/: Makefile  kernel.cl  kernel.hip.cpp  test30_task_info.c
tests/31_isaxpy/: CMakeLists.txt  irishxg.idl  saxpy.py
tests/32_json3/: Makefile  graph.json  kernel.cl  kernel.cl.openmp.h  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test32_json3.cpp  timer.h
tests/33_graph_cpp/: Makefile  kernel.cl  kernel.hip.cpp  kernel.openmp.c  test33_graph.cpp  test33_graph_cpp.cpp
tests/34_set_mem/: Makefile  kernel.openmp.c  kernel.openmp.h  test34_set_mem.cpp  test_backends.sh
tests/35_json_mixed_args_record_replay/: Makefile  graph_dynamic_data_size.json  kernel.openmp.h  test35_json_mixed_args_record_replay.c
tests/36_double_json_mixed_args_record_replay/: Makefile  graph_data_size.json  graph_data_type.json  kernel.cl  kernel.cu  kernel.hip  kernel.hip.cpp  kernel.openmp.c  kernel.openmp.h  test36_double_json_mixed_args_record_replay.c
tests/37_opencl_icd/: Makefile  test37_opencl_icd.c  test_backends.sh
tests/38_offset/: Makefile  kernel.cl  kernel.cu  kernel.hip.cpp  kernel.openmp.h  test38_offset.cpp  test_backends.sh
tests/38_offset_subbuffer/: Makefile  kernel.hip.cpp  kernel.openmp.c  test38_offset_subbuffer.cpp  test_backends.sh
tests/39_dmem2dmem/: c_host.c  cpp_host.cpp  py_host.py
(+358 files in other folders)
